--- a/ML_Web_App/YOLOv6/templates/detect.html
+++ b/ML_Web_App/YOLOv6/templates/detect.html
@@ -49,11 +49,10 @@
 
     
 
-      
-      </div>
+     
 
       <section class="hero is-fullheight is-default is-bold">
-        <div class="hero-body">
+        <div class="">
             <div class="container has-text-centered">
 
                 <div class="columns is-vcentered">
